<resources>
    <string name="app_name">CketCKet</string>
    <string name="textview">TextView</string>
    <string name="titulo">TODO</string>
    <string name="cketcket">CketCket</string>
    <string name="fonod">TODO</string>
    <string name="fondo">TODO</string>
    <string name="linea">TODO</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="UsuarioRegistro">TextView</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="contrasenaRegistro">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="tipo_de_usuario">Tipo de Usuario</string>
    <string name="Registro">Usuario</string>
    <string name="registrarseboton">Registrarse</string>
    <string name="artistas_destacados">Artistas Destacados</string>
    <string name="nuevos_eventos">Nuevos Eventos</string>
    <string name="todo">TODO</string>
    <string name="kiki">TODO</string>
    <string name="nicky">TODO</string>
    <string name="inicio">TODO</string>
    <string name="iniciotitulo">Inicio</string>
    <string name="imagentitulo">TODO</string>
    <string name="lupa">TODO</string>
    <string name="fondoarriba">TODO</string>
    <string name="lupaimagen">TODO</string>
    <string name="pefil_evento">Pefil evento</string>
    <string name="fondope">TODO</string>
    <string name="lupape">TODO</string>
    <string name="trespuntospe">TODO</string>
    <string name="tresrayas">TODO</string>
    <string name="abre_su_alma">Abre su alma</string>
    <string name="nicki_nicole">Nicki Nicole</string>
    <string name="nicki">TODO</string>
    <string name="imagenes_del_evento">Imagenes del evento</string>
    <string name="Ubucacion">TextView</string>
    <string name="trespuntos">TODO</string>
    <string name="lupa_pi">TODO</string>
    <string name="trespuntos_pi">TODO</string>
    <string name="tesrallas_pi">TODO</string>
    <string name="ubicacion">Ubicación</string>
    <string name="abre_su_alma_">ABRE SU ALMA</string>
    <string name="nicki_nicole_pe">NICKI NICOLE</string>
    <string name="ubicacion_pe">UBICACIÓN</string>
    <string name="redes_sociales_del_evento">REDES SOCIALES DEL EVENTO</string>
    <string name="estadio">TODO</string>
    <string name="imagenes_del_evento_pe">IMAGENES DEL EVENTO</string>
    <string name="wizink">TODO</string>
    <string name="descripcion">DESCRIPCIÓN</string>
    <string name="comprar">COMPRAR</string>
    <string name="fecha">FECHA</string>
    <string name="_21_03_2024">21-03-2024</string>
    <string name="precio">PRECIO</string>
    <string name="rss">TODO</string>
    <string name="maps">TODO</string>
    <string name="rrss">TODO</string>
    <string name="desde_30">Desde 30€</string>
    <string name="nicki_nicole_pi">Nicki Nicole</string>
    <string name="chiara_oliver_pi">Chiara Oliver</string>
    <string name="evento_pricipal_del_artista">EVENTO PRICIPAL DEL ARTISTA</string>
    <string name="eventoNicki">TODO</string>
    <string name="foto_perfil_nicki">TODO</string>
    <string name="otros_eventos_del_artista">OTROS EVENTOS DEL ARTISTA</string>
    <string name="ir">Ir</string>
    <string name="evento1N">TODO</string>
    <string name="evento2N">TODO</string>
    <string name="evento3N">TODO</string>
    <string name="mala_costumbre">MALA COSTUMBRE</string>
    <string name="chiara_oliver">CHIARA OLIVER</string>
    <string name="_27_04_2024">27-04-2024</string>
    <string name="historia">Button</string>
    <string name="_29_04_2024">29-04-2024</string>
    <string name="desde_119">Desde 119€</string>
    <string name="power_up">Power up</string>
    <string name="parte_dos">PARTE DOS</string>
    <string name="_16_03_2024">16-03-2024</string>
    <string name="dune">DUNE</string>
    <string name="desde_7_90">Desde 7,90€</string>
    <string name="burgos_vs">BURGOS VS</string>
    <string name="levante">LEVANTE</string>
    <string name="desde_20">Desde 20€</string>
    <string name="_23_05_2024">23-05-2024</string>
    <string name="el_fantasma">EL FANTASMA</string>
    <string name="de_la_opera">DE LA OPERA</string>
    <string name="desde_25">Desde 25€</string>
    <string name="ver_historia">Ver historia</string>
    <string name="artistas_a_los_que_sigue">ARTISTAS A LOS QUE SIGUE</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="bloquear">Bloquear</string>
    <string name="eventos_a_los_que_sigue">EVENTOS A LOS QUE SIGUE</string>
    <string name="button">Button</string>
    <string name="ac_dc">AC/DC</string>
    <string name="chiara">Chiara</string>
    <string name="nicki_nicole_pu">Nicki Nicole</string>
    <string name="abre_su_alma_pu">Abre su alma</string>
    <string name="power_up_pu">Power Up</string>
    <string name="acceso_directo">Acceso Directo</string>
    <string name="linea_horizontal">TODO</string>
    <string name="asistencia_t_cnica">Asistencia Técnica</string>
    <string name="chats">Chats</string>
    <string name="foro_de_dudas">Foro de Dudas</string>
    <string name="mis_entradas">Mis Entradas</string>
    <string name="mis_puntos">Mis Puntos</string>
    <string name="tresrayasdune">TODO</string>
    <string name="enviar_mensaje_fd">Enviar mensaje</string>
    <string name="a_adir_archivo">Añadir Archivo</string>
    <string name="canjear_puntos">Canjear puntos</string>
    <string name="_4500_puntos">4500 puntos</string>
    <string name="movimientos">Movimientos:</string>
    <string name="_100_puntos_inicio_sesi_n_diario">100 puntos- Inicio sesión Diario</string>
    <string name="_500_puntos_compra_de_entradas">500 puntos- Compra de entradas</string>
    <string name="_250_puntos_rese_a_registrada">250 puntos- Reseña registrada</string>
    <string name="lupaboton">TODO</string>
    <string name="barra">TODO</string>
    <string name="lupa_ba">TODO</string>
    <string name="lupa_bu">TODO</string>
    <string name="evento">EVENTO</string>
    <string name="merchandising">MERCHANDISING</string>
    <string name="ver_historia_kiki">Ver historia</string>
    <string name="lupa_tienda">TODO</string>
    <string name="Merchandising">Button</string>
    <string name="Evento">Button</string>
    <string name="evento1">Evento</string>
    <string name="merchandising1">Merchandising</string>
    <string name="tres_puntos">TODO</string>
    <string name="ayuda">ayuda</string>
    <string name="tresPuntos_ba">TODO</string>
    <string name="merchandising_ba">TODO</string>
    <string name="tresPuntos_busa">TODO</string>
    <string name="introduce_el_nombre_de_usuario">INTRODUCE EL NOMBRE DE USUARIO</string>
    <string name="tresPuntos_chat">TODO</string>
    <string name="tresPuntos_live">TODO</string>
    <string name="mas">TODO</string>
    <string name="TresPuntos_merch">TODO</string>
    <string name="camiseta_nicky">TODO</string>
    <string name="compradas">compradas</string>
    <string name="vendidas">vendidas</string>
    <string name="introduce_tus_apellidos">\'Introduce tus apellidos\'</string>
    <string name="apellidos">Apellidos</string>
    <string name="por_precios">Por Precios</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="elegir_mis_asientos">Elegir mis asientos</string>
    <string name="mapaevento">MapaEvento</string>
    <string name="information">information</string>
    <string name="imagenartista">ImagenArtista</string>
    <string name="mayor_a_menor">Mayor a Menor</string>
    <string name="menor_a_mayor">Menor a Mayor</string>
    <string name="eventos_admnistrados">EVENTOS ADMNISTRADOS</string>
    <string name="foto_Admin" />
    <string name="Evento_Kiki" />
    <string name="AdminArriba" />
    <string name="admin" />
    <string name="sony_centro" />
    <string name="sony_barra" />
    <string name="artistas_asociados" />
    <string name="ARTISTAS_ASOCIADOS" />
    <string name="error404" />
    <string name="Error" />
    <string name="emote" />
    <string name="sendmessage">Send Message\n</string>
    <string name="add_file_malo">add file</string>
    <string name="addfile">Add file\n</string>
    <string name="eventoingles">Event</string>
    <string name="introduceNombreUsuario">ENTER USER NAME</string>
    <string name="enviaMensajeIngles">Send message</string>
    <string name="canjearPuntos">Redeem points</string>
    <string name="movements">Movements</string>
    <string name="_100_points_daily_login">100 points - Daily login</string>
    <string name="_250_points_review_registered">250 points- Review registered</string>
    <string name="_500_points_purchase_tickets">500 points- Purchase tickets</string>
    <string name="_4500_points">4500 points</string>
    <string name="movements1">Movements:</string>
    <string name="managed_events">MANAGED EVENTS</string>
    <string name="artist_main_event">ARTIST MAIN EVENT</string>
    <string name="other_events_of_the_artist">OTHER EVENTS OF THE ARTIST</string>
    <string name="images_of_the_event">IMAGES OF THE EVENT</string>
    <string name="location">LOCATION</string>
    <string name="price">PRICE</string>
    <string name="date">DATE</string>
    <string name="social_networks_of_the_event">SOCIAL NETWORKS OF THE EVENT</string>
    <string name="description">DESCRIPTION</string>
    <string name="_29_04_24">29/04/24</string>
</resources>