<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-42dp">

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rrss"
        app:layout_constraintVertical_bias="0.573"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/compra_nicki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SiguienteError2"
        android:text="@string/comprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rrss"
        app:layout_constraintVertical_bias="0.616"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/rrss"
        android:layout_width="406dp"
        android:layout_height="101dp"
        android:contentDescription="@string/rrss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.307"
        app:srcCompat="@drawable/rrss" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redes_sociales_del_evento"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleMaps"
        app:layout_constraintVertical_bias="0.108"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/googleMaps"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:contentDescription="@string/maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562"
        app:srcCompat="@drawable/maps" />

    <ImageView
        android:id="@+id/linea"
        android:layout_width="52dp"
        android:layout_height="115dp"
        android:contentDescription="@string/rss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wizin"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/img_1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubicacion_pe"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/googleMaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wizin"
        app:layout_constraintVertical_bias="0.983"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/nickiNicole"
        android:layout_width="237dp"
        android:layout_height="131dp"
        android:contentDescription="@string/nicki"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/poster_dune" />

    <TextView
        android:id="@+id/AbreSuAlma"
        android:layout_width="84dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:text="@string/parte_dos"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/nickiNicole"
        app:layout_constraintTop_toBottomOf="@+id/Nicki"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Nicki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dune"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/nickiNicole"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/imagenesEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imagenes_del_evento_pe"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wizin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickiNicole" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenesEvento"
        app:layout_constraintVertical_bias="0.479"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenesEvento"
        app:layout_constraintVertical_bias="0.36"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/Fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_16_03_2024"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desde_7_90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <ImageView
        android:id="@+id/estadio"
        android:layout_width="195dp"
        android:layout_height="132dp"
        android:contentDescription="@string/estadio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toEndOf="@+id/wizin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        app:srcCompat="@drawable/duneentrada"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/wizin"
        android:layout_width="186dp"
        android:layout_height="126dp"
        android:contentDescription="@string/wizink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        app:srcCompat="@drawable/cinedune" />

</androidx.constraintlayout.widget.ConstraintLayout>