<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventob"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-42dp">

    <ImageView
        android:id="@+id/acdc"
        android:layout_width="399dp"
        android:layout_height="544dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/forordudad"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/añadirarchivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_archivo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <Button
        android:id="@+id/Enviarmensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_mensaje_fd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

</androidx.constraintlayout.widget.ConstraintLayout>